# bioinfo-sidecar

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SETUP.md  WORKINSTRUCTIONS.md  pyproject.toml
docs/: PACKAGES.md
scripts/: init_db.sql
sidecar/: __init__.py  ask.py  config.py  fetch.py  parse.py  store.py  ui.py
sidecar/models/: chunk.py  paper.py
sidecar/services/: arxiv_client.py  ollama_client.py  parser.py  pgvector_client.py
sidecar/services/agents/: graph.py  nodes.py  state.py
tests/: conftest.py
tests/unit/: test_agents.py  test_models.py
